--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,15 +1,17 @@
 <div class="col-sm-6">
   <h1 id="resume">Resume Builder</h1>
-  <div class="resume-help"> Drag and drop the resume pieces you want to add on your resume and once ready click on the save button at the bottom!</div>
-  <div id="trash"><i class="fa fa-2x fa-trash" aria-hidden="true"></i></div>
+  <div class="resume-help"> Drag and drop the resume pieces you want to add on your resume and once ready give your resume a name and click on the save button!</div>
 
-  <form class="form-inline">
+
+  <form class="form-inline" id="save-resume-form">
     <div class="form-group">
       <label for="name">Resume Name</label>
       <input type="text" class="form-control" id="name" placeholder="My Resume">
     </div>
     <button type="submit" class="btn btn-success" id="save-resume">Save Resume</button>
   </form>
+  <div id="trash"><i class="fa fa-2x fa-trash" aria-hidden="true"></i></div>
+
 
 
   <div id="resumebox">
