--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -14,6 +14,7 @@ body { padding-top: 80px; }
 @import "bootswatch/flatly/bootswatch";
 
 // The font-awesome style
+@import "font-awesome-sprockets";
 @import "font-awesome";
 
 // To display alerts
