--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -3,12 +3,17 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 h1#resume {
-  text-align: center;
+  position: fixed;
+  margin-top: 10px;
+  margin-left: 150px;
 }
 
 #resumebox {
+  position: fixed;
+  overflow-y: scroll;
   padding: 10px;
-  min-height: 800px;
+  height: 800px;
+  width: 600px;
   border: 1px solid #DEDEDE;
   background: #f2f5f6;
   background: -moz-linear-gradient(top,  #f2f5f6 0%, #e3eaed 37%, #c8d7dc 100%);
@@ -16,6 +21,7 @@ h1#resume {
   background: linear-gradient(to bottom,  #f2f5f6 0%,#e3eaed 37%,#c8d7dc 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
   padding-bottom: 50px;
+  margin-top: 120px;
   margin-bottom: 100px;
 }
 
@@ -42,12 +48,17 @@ resumetext {
 }
 
 div#trash {
-  text-align: right;
+  position: fixed;
+  margin-top: 73px;
+  margin-left: 570px;
 }
 
 #save-resume-form {
   padding-top: 10px;
-  text-align: center
+  text-align: center;
+  position: fixed;
+  margin-top: 60px;
+  margin-left: 60px;
 }
 
 .resume-help {
@@ -78,6 +89,11 @@ div#trash {
       50%{background-position:100% 50%}
       100%{background-position:0% 50%}
   }
+}
+
+h1#resume-snippet-show-title {
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 // Customize here the display of the resume template 1
