--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -1,4 +1,4 @@
-<h1 id="resume">Resume Snippets Toolbox</h1>
+<h1 id="resume-snippet-show-title">Resume Snippets Toolbox</h1>
 <div class="row">
   <div class="col-md-offset-3 col-md-6">
     <div class = "panel-group snippets-accordion" id = "accordion">
