add ability to delete a resume, fix resumesnippet dependent of resume to nullify, add error handling to linkedin scraper

--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -8,6 +8,13 @@ h1#resume {
   margin-left: 150px;
 }
 
+.resume-title {
+  font-size: 2em;
+}
+.resume-title:hover {
+  opacity: 0.5;
+}
+
 #resumebox {
   position: fixed;
   overflow-y: scroll;
