--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -1,4 +1,10 @@
 <!-- This is Template 1 -->
+<div class="text-center">
+<%= link_to resume_path(format: 'pdf'), class: "btn download-pdf-button btn-lg" do %>
+  <i class="fa fa-file-text-o" aria-hidden="true"></i>  Download PDF
+<% end %>
+</div>
+
 <div id="resume-preview-box" class="sortable">
 
   <div id="resume-details">
