Add button to remove dragged item from resumebox on new resume page, add js function to allow such ability and clean up the create_resume javascript file

--- a/app/views/snippets/snippet/_accomplishment.html.erb
+++ b/app/views/snippets/snippet/_accomplishment.html.erb
@@ -1,4 +1,7 @@
 <div class="well well-sm well-snippet" id="<%= dom_id(accomplishment) %>">
+  <div class="snippet-remove-hidden pull-right">
+    <a href="#" class='btn btn-danger btn-xs'><i class="fa fa-trash" aria-hidden="true"></i></a>
+  </div>
   <div class="snippet-name" data-id="<%= accomplishment.id %>"> <%= accomplishment.name %> </div>
   <ul>
     <% accomplishment.properties.to_hash.each do |prop, value| %>
