--- a/app/views/snippets/snippet/_other.html.erb
+++ b/app/views/snippets/snippet/_other.html.erb
@@ -1,4 +1,6 @@
-<div class="well well-sm well-snippet" id="<%= dom_id(other) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(other) %>">  <div class="snippet-remove-hidden pull-right">
+    <a href="#" class='btn btn-danger btn-xs'><i class="fa fa-trash" aria-hidden="true"></i></a>
+  </div>
   <div class="snippet-name" data-id="<%= other.id %>"> <%= other.name %> </div>
   <ul>
     <% other.properties.to_hash.each do |prop, value| %>
