--- a/app/views/snippets/snippet/_detail.html.erb
+++ b/app/views/snippets/snippet/_detail.html.erb
@@ -1,4 +1,7 @@
 <div class="well well-sm well-snippet" id="<%= dom_id(detail) %>">
+  <div class="snippet-remove-hidden pull-right">
+    <a href="#" class='btn btn-danger btn-xs'><i class="fa fa-trash" aria-hidden="true"></i></a>
+  </div>
   <div class="snippet-name" data-id="<%= detail.id %>"> <%= detail.name %> </div>
   <ul>
     <% detail.properties.to_hash.each do |prop, value| %>
