--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,10 +12,11 @@
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="<%= 'active' if current_page?(root_path) %>"><a href="<%= root_path %>">Home</a></li>
+        <% if user_signed_in? %>
         <li class="<%= 'active' if current_page?(resumes_path) %>"><a href="<%= resumes_path %>"> My Resumes</a></li>
         <li class="<%= 'active' if current_page?(new_resume_path) %>"><a href="<%= new_resume_path %>"> Create new Resume</a></li>
         <li class="<%= 'active' if current_page?(snippets_path) %>"><a href="<%= snippets_path %>">Snippet Toolbox</a></li>
+        <% end %>
       </ul>
 
 
@@ -35,8 +36,8 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to 'Log In', new_user_session_path %></li>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+          <li><%= link_to 'Log In', new_user_session_path %></li>
         <% end %>
       </ul>
 
