document the save resume js file, remove resume positions obsolete js, define template controller action for resume pdf

--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -48,9 +48,8 @@ h1#resume {
   background-color: #f9f9f9;
 }
 
-resumetext {
-  font-size: 1em;
-  color: black;
+.btn-group-download-pdf {
+  margin-bottom: 20px;
 }
 
 #save-resume-form {
