--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="front-page-jumbotron-title"><i class="fa fa-leaf" aria-hidden="true"></i> ResuMix</h1>
   <p class="front-page-jumbotron-subtitle">Mix and match your resume details to build the perfect resume for the job!</p>
   <div class="text-center">
-    <%= link_to "Sign Up For Free!", new_user_registration_path, class: 'btn download-pdf-button btn-lg'%>
+    <%= link_to "Sign Up For Free!", new_user_registration_path, class: 'btn sign-up-button btn-lg'%>
   </div>
 </div>
 <div class="front-page-section-two">
