--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -43,7 +43,7 @@ body { padding-top: 80px; }
   padding: 0px;
 }
 
-.download-pdf-button {
+.sign-up-button {
   margin-bottom: 20px;
   background: #6fe3d0;
   background-image: -webkit-linear-gradient(top, #6fe3d0, #003352);
@@ -64,7 +64,7 @@ body { padding-top: 80px; }
   text-decoration: none;
 }
 
-.download-pdf-button:hover {
+.sign-up-button:hover {
   background: #6fe3d0;
   background-image: -webkit-linear-gradient(top, #6fe3d0, #4c8f84);
   background-image: -moz-linear-gradient(top, #6fe3d0, #4c8f84);
