--- a/app/assets/stylesheets/common/static_pages.scss
+++ b/app/assets/stylesheets/common/static_pages.scss
@@ -1,3 +1,6 @@
+// Google font
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
 .front-page-jumbotron {
   margin-top: -20px;
   margin-bottom: 0px;
@@ -19,6 +22,7 @@ h1.front-page-jumbotron-title {
   text-align: center;
   font-size: 2.2em !important;
   padding-bottom: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .front-page-jumbotron-register-text {
