--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -1,5 +1,6 @@
 <!-- This is Template 0 -->
 
+<!-- Template Select Bar -->
 <div class="text-center btn-group-download-pdf">
   <div class="btn-group">
     <button type="button" class="btn btn-primary">Default Template</button>
