--- a/app/assets/stylesheets/common/resumes.scss
+++ b/app/assets/stylesheets/common/resumes.scss
@@ -1,3 +1,12 @@
+.fa-17 {
+  font-size: 1.7em;
+}
+
+.fa-15 {
+  font-size: 1.5em;
+  width: 20px;
+}
+
 h1#resume {
   position: fixed;
   margin-top: 10px;
