--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,46 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="col-md-offset-3 col-md-6">
+    <h1 class="text-center">Sign up</h1>
+    <br>
+    <div class="text-center">
+      <a href="<%= user_linkedin_omniauth_authorize_path %>" class="btn btn-sm btn-info"><i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i> Sign up with Linkedin</a>
+    </div>
+    <br>
+    <hr>
+    <h3 class="text-center"> Or Sign Up With Your Email</h3>
+    <br>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+      <div class="form-inputs">
+        <div class="input-group">
+            <span class="input-group-addon">
+                <i class="fa fa-envelope-o fa-15" aria-hidden="true"></i>
+            </span>
+            <%= f.input :email, autofocus: true, label: false, placeholder: "Email", input_html: { class:"form-control form-with-icon" }%>
+        </div>
+        <br>
+        <div class="input-group">
+            <span class="input-group-addon">
+                <i class="fa fa-key fa-15" aria-hidden="true"></i>
+            </span>
+          <%= f.input :password, label: false, placeholder: "Password", input_html: { class:"form-control form-with-icon" } %>
+        </div>
+        <br>
+        <div class="input-group">
+            <span class="input-group-addon">
+                <i class="fa fa-key fa-15" aria-hidden="true"></i>
+            </span>
+          <%= f.input :password_confirmation, label: false, placeholder: "Password Confirmation", input_html: { class:"form-with-icon form-control" }%>
+        </div>
+      </div>
+      <br>
+      <div class="form-actions">
+        <%= f.button :submit, "Create account!", class:"btn btn-success btn-lg center-block" %>
+      </div>
+    <% end %>
+    <br>
+    <br>
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
