--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -1,12 +1,21 @@
 <div class="col-md-offset-3 col-md-6">
   <h1 class="text-center"> Your Resumes </h1>
-  <% @resumes.each do |r| %>
-  <div class="well">
-    <%= link_to r.name, resume_path(r), class: "resume-title" %>
-    <%= link_to 'Delete', resume_path(r),
-                          method: :delete,
-                          data: { confirm: 'Are you sure you want to delete ' + r.name + '?' },
-                          class: "pull-right btn btn-sm btn-danger" %>
-  </div>
+  <% if @resumes.empty? %>
+    <div class="jumbotron text-center">
+      <span class="h4">It looks like you don't have any resumes yet...</span>
+      <br><br>
+      <p><a class="btn btn-primary btn-lg" href="<%= new_resume_path %>" role="button"><i class="fa fa-rocket" aria-hidden="true"></i> Create a new resume!</a></p>
+    </div>
+  <% else %>
+    <% @resumes.each do |r| %>
+      <div class="well">
+        <%= link_to r.name, resume_path(r), class: "resume-title" %>
+        <%= link_to resume_path(r), method: :delete,
+                                    data: { confirm: 'Are you sure you want to delete ' + r.name + '?' },
+                                    class: "pull-right btn btn-sm btn-danger" do %>
+                                    <i class="fa fa-17 fa-trash" aria-hidden="true"></i>
+                                    <% end %>
+      </div>
+    <% end %>
   <% end %>
 </div>
