--- a/app/assets/stylesheets/pdf-templates/pdf2.css.scss
+++ b/app/assets/stylesheets/pdf-templates/pdf2.css.scss
@@ -1,3 +1,11 @@
+.resume-details-initials {
+    font-size: 5em;
+    text-align: left;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: rgba(220, 20, 60, 1);
+}
+
 #resume-section-title {
   font-size: 1.8em;
   padding-top: 15px;
@@ -11,14 +19,13 @@
 }
 
 .resume-detail {
-  text-align: left;
-  padding: 10px;
-  border-radius: 5px 5px 5px 5px;
-  -moz-border-radius: 5px 5px 5px 5px;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border: 2px solid #eb404e;
-  background-color: rgba(204, 0, 0, 0.1);
+    width: 70%;
+    text-align: left;
+    padding: 10px;
+    margin-top: -110px;
+    margin-left: 140px;
 }
+
 
 #resume-details-name {
   font-size: 2.5em;
